# cohere_globalmart

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  api_server.py
app/web/: home.js  i18n.js  index.html  personalized.html  personalized.js  styles.css
data/: .gitignore
deliverables/: COHERE_GLOBALMART_PRESENTATION_CONTENT.md  DELIVERABLES_README.md  ONSITE_20MIN_RUN_OF_SHOW.md  VIDEO_WALKTHROUGH_SCRIPT.md
docs/: ARCHITECTURE.md  DEMO_RUNBOOK.md  README.md  TROUBLESHOOTING.md
docs/releases/: v1.0.0.md
scripts/: build_retailnext_assignment_deck.py  capture_retailnext_screens.js  download_sample_clothes.py  evaluate_retrieval.py  run_api_dev.sh
src/retailnext_outfit_assistant/: __init__.py  catalog.py  cohere_utils.py  db.py  retrieval.py  service.py
